--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "what2cookserver",
   "version": "1.0.0",
   "description": "server for what2cook",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "start": "tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +23,15 @@
   "homepage": "https://github.com/pzhang24/what2cookServer#readme",
   "engines": {
     "node": "14.x"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@tsconfig/node14": "^1.0.1",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.7",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
