--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "server for what2cook",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
