--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server for what2cook",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && prisma generate",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,12 +26,17 @@
     "node": "14.x"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@prisma/client": "^3.4.2",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12",
+    "prisma": "^3.4.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
+    "@types/uuid": "^8.3.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
