add get all groups endpoint

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc && prisma generate",
+    "migrate": "prisma migrate dev",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
