--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.4.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "prisma": "^3.4.2",
